option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "LoginProto";
option objc_class_prefix = "LPT";


service Login{

  rpc LoginWithUserNameAndPassword(LoginRequest) returns (LoginResponse);
}

message LoginRequest{
  required string username=1;
  required string password=2;
}

enum Gender{
  MALE=1;
  FEMALE=2;
}

message LoginResponse{
  required bool success=1;
  optional string username=2;
  optional string fullname=3;
  optional string imageurl=4;
  optional Gender gender =5;

}
